# TheBindingOfJean-Michel

./: .gitignore  CMakeConfig.txt  CMakeLists.txt
Header/Entity/: AnimatedEntity.hpp  Entity.hpp  Projectile.hpp
Header/GameEngine/: Game.hpp  GameEngine.hpp
Header/GraphicEngine/: Animation.hpp  AnimationState.hpp  DrawableManager.hpp  DrawableManager.inl  GraphicEngine.hpp  RenderBase.hpp  Sprite.hpp
Header/Level/: Level.hpp  LevelGenerator.hpp
Header/PhysicEngine/: PhysicEngine.hpp  PhysicObjects.hpp
Header/PhysicEngine/Trigger/: ProjectileTrigger.hpp  TriggerAction.hpp
Header/Player/: Player.hpp
Header/Room/: BossRoom.hpp  NeighbourPosition.hpp  Room.hpp  RoomStorage.hpp
Header/StateMachine/: GameState.hpp  MenuState.hpp  State.hpp  StateMachine.hpp
Header/Tools/: Position.hpp  RoomParser.hpp  SettingsParser.hpp  Singleton.hpp  Updatable.hpp
Settings/: Settings.ini
Source/: CMakeLists.txt  main.cpp
Source/Entity/: AnimatedEntity.cpp  Entity.cpp  Projectile.cpp
Source/GameEngine/: Game.cpp  GameEngine.cpp
Source/GraphicEngine/: Animation.cpp  AnimationState.cpp  GraphicEngine.cpp  RenderBase.cpp  Sprite.cpp
Source/Level/: Level.cpp  LevelGenerator.cpp
Source/PhysicEngine/: PhysicEngine.cpp  PhysicObjects.cpp
Source/PhysicEngine/Trigger/: ProjectileTrigger.cpp  TriggerAction.cpp
Source/Player/: Player.cpp
Source/Room/: BossRoom.cpp  Room.cpp  RoomStorage.cpp
Source/StateMachine/: GameState.cpp  MenuState.cpp  State.cpp  StateMachine.cpp
Source/Tools/: RoomParser.cpp  SettingsParser.cpp  Updatable.cpp
res/Rooms/: 0.room  1.room  boss1.room
